QPIDJMS-537: replace Float/Double constructor usage now marked deprecated-for-removal in Java 16