@@ -361,9 +361,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     } else if (rc == Long.class) {
                         lv = Long.valueOf(((Number)lv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else {
                         return Boolean.FALSE;
                     }
@@ -373,9 +373,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     } else if (rc == Long.class) {
                         lv = Long.valueOf(((Number)lv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else {
                         return Boolean.FALSE;
                     }
@@ -383,9 +383,9 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     if (rc == Long.class) {
                         lv = Long.valueOf(((Number)lv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else {
                         return Boolean.FALSE;
                     }
@@ -393,29 +393,29 @@ public abstract class ComparisonExpression extends BinaryExpression implements B
                     if (rc == Integer.class) {
                         rv = Long.valueOf(((Number)rv).longValue());
                     } else if (rc == Float.class) {
-                        lv = new Float(((Number)lv).floatValue());
+                        lv = Float.valueOf(((Number)lv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else {
                         return Boolean.FALSE;
                     }
                 } else if (lc == Float.class) {
                     if (rc == Integer.class) {
-                        rv = new Float(((Number)rv).floatValue());
+                        rv = Float.valueOf(((Number)rv).floatValue());
                     } else if (rc == Long.class) {
-                        rv = new Float(((Number)rv).floatValue());
+                        rv = Float.valueOf(((Number)rv).floatValue());
                     } else if (rc == Double.class) {
-                        lv = new Double(((Number)lv).doubleValue());
+                        lv = Double.valueOf(((Number)lv).doubleValue());
                     } else {
                         return Boolean.FALSE;
                     }
                 } else if (lc == Double.class) {
                     if (rc == Integer.class) {
-                        rv = new Double(((Number)rv).doubleValue());
+                        rv = Double.valueOf(((Number)rv).doubleValue());
                     } else if (rc == Long.class) {
-                        rv = new Double(((Number)rv).doubleValue());
+                        rv = Double.valueOf(((Number)rv).doubleValue());
                     } else if (rc == Float.class) {
-                        rv = new Double(((Number)rv).doubleValue());
+                        rv = Double.valueOf(((Number)rv).doubleValue());
                     } else {
                         return Boolean.FALSE;
                     }
